# skelFMM

./: .gitmodules  CITATION.cff  CONTRIBUTING.md  README.md  environment-gpu.yml  environment.yml  pyproject.toml  skeletonization_matvec_curvy_annulus_demo.ipynb  sphere_double_layer_kernel_adjoint_demo.ipynb
.github/workflows/: ci.yml  gpu-ci.yml
skelfmm/: __init__.py  _pykeops_cuda.py  batched_fmm.py  operators.py  recursive_skel.py  skel_fmm.py  util.py  util_batched.py
skelfmm/examples/: __init__.py  convergence_helmholtz_double_layer_sphere.py  convergence_helmholtz_single_layer_sphere.py  convergence_laplace_double_layer_sphere.py  convergence_laplace_single_layer_sphere.py  driver_single_layer_kernels.py  example_helmholtz_cube.py  example_laplace_curvy_annulus.py  example_sphere_adjoint_double_layer_kernel.py
skelfmm/examples/util/: __init__.py  geometry_utils.py  quad_utils.py  report_utils.py  single_layer_geometry_utils.py  sphere_kernel_utils.py
src/: skel_fmm.py  util.py
tests/: test_batched.py  test_examples.py  test_fmm.py  test_operators.py  test_pykeops_cuda.py  test_util.py
